# bird-project

./: .gitignore  bird_project.duckdb  birdweather_species_pipeline.duckdb  output.json  pyproject.toml
bird-project/: assets.py  definitions.py  resources.py
bird-project/dbt/: assets.py
dbt_bird_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_bird_project/models/staging/: __staging_models.yml  __staging_sources.yml  detections_stg.sql  species_stg.sql  stations_stg.sql
dlt_sources/: birdweather.py  graphql.py  rest_api_pipeline.py
evidence_bird_project/.evidence/customization/: .profile.json
evidence_bird_project/pages/: +layout.svelte  0._intro.md  1._detections,_per_day.md  2._detections,_all_time.md  3._rarest_species_by_date.md  4._top_species_per_month.md  5._conclusions.md  xdetections,_by_probability.md  xdetections,_by_score.md  xdetections_vs_probability.md
evidence_bird_project/sources/birdproject/: connection.yaml  detections.sql
