[project]
name = "bird-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-embedded-elt>=0.25.3",
    "dagster>=1.9.3",
    "dbt-core>=1.8.8",
    "dagster-webserver>=1.9.3",
    "pytest>=8.3.4",
    "dlt[duckdb]>=1.4.1",
    "streamlit>=1.40.2",
    "duckdb>=1.1.3",
    "dagster-duckdb>=0.25.3",
    "polars>=1.16.0",
    "dbt-duckdb>=1.9.1",
    "dagster-dbt>=0.25.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "bird-project.definitions"
project_name = "bird-project"

[tool.setuptools.packages.find]
exclude=["bird-project-tests"]
